force-app/main/default/objects/ServicioCosteExtra__c/ServicioCosteExtra__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ServicioCosteExtra</label>
</CustomObject>