force-app/main/default/objects/ServicioCosteExtra__c/fields/Name_provincia__c.field-meta.xml
<CustomField>
    <fullName>Name_provincia__c</fullName>
    <description>Name de la provincia correspondiente en Listas de selección</description>
    <inlineHelpText>Name de la provincia correspondiente en Listas de selección</inlineHelpText>
    <label>Name provincia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>