force-app/main/default/objects/ServicioCosteExtra__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>1: Mto, 2: Inspección, 3:Revisión</description>
    <inlineHelpText>1: Mto, 2: Inspección, 3:Revisión</inlineHelpText>
    <label>Tipo</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>