force-app/main/default/objects/ServicioCosteExtra__c/listViews/Ver.listView-meta.xml
<ListView>
    <fullName>Ver</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Coste__c</columns>
    <columns>Name_provincia__c</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver</label>
    <language>es</language>
</ListView>